--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^10.4.4",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.13",
+    "@types/mocha": "^10.0.9",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.16",
     "@types/supertest": "^6.0.0",
@@ -54,7 +56,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "prisma": "^5.19.1",
     "source-map-support": "^0.5.21",
