adding project instructions in readme

--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,9 @@
 services:
   api:
+    container_name: reform-api
     build:
       context: ./
     ports:
       - 5000:5000
+    env_file:
+      - .env
